--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name"><br>
+
+		<label for="phone">Phone Number</label>
+		<input type="text" id="phone" placeholder="Phone Number"><br>
+
+		<label for="address">Address</label>
+		<input type="text" id="address" placeholder="Address"><br>
+
+		<label>Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox"><br>
+
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+			<option>--Select--</option>
+			<option>Dog A</option>
+			<option>Dog B</option>
+			<option>Dog C</option>
+		</select><br>
+		
+		<button type="submit" id="submit">Submit</button>
+		
+	</form>
 
 </body>
 
