--- a/main.html
+++ b/main.html
@@ -20,12 +20,12 @@
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address"><br>
 
-		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<label for="checkbox">Have you ever lived with a Dog before?<label>
 		<input type="checkbox" id="checkbox"><br>
 
 		<label for="multiSelect">Please select your preferred breeds</label>
 		<select id="multiSelect">
-			<option>--Select--</option>
+			<!-- <option>--Select--</option> -->
 			<option>Dog A</option>
 			<option>Dog B</option>
 			<option>Dog C</option>
