--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address"><br>
 
-		<label for="checkbox">Have you ever lived with a Dog before?<label>
-		<input type="checkbox" id="checkbox"><br>
+		<label for="checkbox">Have you ever lived with a Dog Before?<label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 
 		<label for="multiSelect">Please select your preferred breeds</label>
 		<select id="multiSelect">
