--- a/main.html
+++ b/main.html
@@ -24,14 +24,14 @@
 		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 
 		<label for="multiSelect">Please select your preferred breeds</label>
-		<select id="multiSelect">
+		<select id="multiSelect" value="Make this as a multi-select box with at least 3 options">
 			<!-- <option>--Select--</option> -->
 			<option>Dog A</option>
 			<option>Dog B</option>
 			<option>Dog C</option>
 		</select><br>
 		
-		<button type="submit" id="submit">Submit</button>
+		<button type="submit" id="submit" value="Submit">Submit</button>
 		
 	</form>
 
