--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
 		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 
 		<label for="multiSelect">Please select your preferred breeds</label>
-		<select id="multiSelect" value="Make this as a multi-select box with at least 3 options">
-			<!-- <option>--Select--</option> -->
+		<select id="multiSelect">
+			<option>--Select--</option>
 			<option>Dog A</option>
 			<option>Dog B</option>
 			<option>Dog C</option>
