--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 			<option>Dog C</option>
 		</select><br>
 		
-		<button type="submit" id="submit" value="Submit">Submit</button>
+		<input type="submit" id="submit" value="Submit">
 		
 	</form>
 
